fix user map placeholder + fix side menu icon alignment

--- a/app/assets/stylesheets/shared/_header.css.scss
+++ b/app/assets/stylesheets/shared/_header.css.scss
@@ -119,7 +119,6 @@
       .avatar {
         width: 30px;
         height: 30px;
-        margin: -5px 0 0 0;
         border-radius: 15px;
       }
       .user-name {
