--- a/app/assets/stylesheets/users/_profile.css.scss
+++ b/app/assets/stylesheets/users/_profile.css.scss
@@ -31,6 +31,7 @@
 
     .map { height: 165px; }
     .placeholder  { max-height: 50px; width: 100%; }
+    .overlay-message { margin-top: 20px; }
   }
 
   h1.name {
